# block

./: .block  .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GitVersion.yml  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  e2e.yml  test.yml  version.yml
commands/: create.md
hooks/: check-jq.cmd  check-jq.sh  hooks.json  protect-directories.cmd  protect-directories.sh  protect_directories.py  ruff-lint.cmd  run-hook.cmd  run-subagent-hook.cmd  subagent_tracker.py
opencode/: package.json
skills/claude-block/: SKILL.md
skills/create/: SKILL.md
tests/: conftest.py  protect-directories.bats  test_agent_permissions.py  test_agent_rules.py  test_allowed_patterns.py  test_bash_commands.py  test_basic_protection.py  test_blocked_patterns.py  test_child_dir_blocks.py  test_edge_cases.py  test_file_path_resolution.py  test_guide_messages.py  test_helper.bash  test_hook_integration.py  test_invalid_config.py  test_local_config.py  test_marker_file_protection.py  test_subagent_tracker.py  test_tool_types.py  test_wildcards.py
